# Flow360

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  2025-12-06-caveat-the-messages-below-were-generated-by-the-u.txt  AGENTS.md  BUILD  CHANGELOG.md  README.md  REFACTOR_PLAN.md  b777.py  flow360.html  fork_cloud_case.py  genindex.html  index.html  objects.inv  plan_sort_json.markdown  pyproject.toml  report.py  report_funcs.py  search.html  searchindex.js  setup.py  simulation.json  test.json
.github/: release.yml
.github/hotfix-manual/: PR-1838-to-main.md  PR-1840-to-main.md  PR-1858-to-main.md
.github/scripts/: coverage_summary.py  pypi_check_runs.js
.github/workflows/: auto-release.yml  build-offline-bundle.yml  claude.yml  codeql-analysis.yml  codestyle.yml  create-hotfix-pr.yml  deploy-doc.yml  hotfix-tracking-guard.yml  manual.yml  pypi-publish.yml  python-publish.yml  python-pypi-publish.yml  release.yml  schema-update.yml  sync-main-to-develop.yml  test.yml
_sources/: index.rst.txt
_sources/flow360doc/: cli.rst.txt
config/: flags.py
docs/: autodoc.py  conf.py  flow360.rst  makeDocs
docs/flow360doc/: cli.rst  cloud.rst  components.rst
doctrees/: flow360.doctree  index.doctree
doctrees/flow360doc/: cli.doctree  cloud.doctree  components.doctree
examples/: BET_disk.ipynb  Simulation_interface_illustration.py  aeroacoustics.ipynb  alpha_sweep.ipynb  async_download.py  async_upload_download.py  beta_stl_volume_mesher_from_inputs.py  case_from_json.py  case_from_yaml.py  case_params_with_units.py  case_results.py  change_account_and_submit.py  create_ppt_report.py  display_mesh_info.py  generate_multiple_meshes.py  geometry_from_3rd_party_geometry_file.py  geometry_from_assembly_part_files.py  geometry_from_csm_file.py  geometry_from_files.py  geometry_id_surface_volume_case_airplane_v1_from_3rd_party_geometry.py  geometry_id_surface_volume_case_airplane_v1_from_csm.py  geometry_id_surface_volume_case_airplane_v1_from_egads.py  geometry_id_surface_volume_case_airplane_v2_from_3rd_party_geometry.py  geometry_id_surface_volume_case_airplane_v2_from_csm.py  geometry_id_surface_volume_case_airplane_v2_from_egads.py  geometry_id_surface_volume_case_cylinder_v1_from_3rd_party_geometry.py  geometry_id_surface_volume_case_cylinder_v2_from_3rd_party_geometry.py  geometry_submit_with_complete_files.py  geometry_submit_with_missing_files.py  geometry_submit_with_multiple_roots.py  geometry_surface_volume_case_airplane_v2_from_csm.py  geometry_surface_volume_mesh_v2_from_inputs.py  geometry_to_surface_mesh_V2.py  list_cases.py  mesh_info.py  new_workbench_project_from_geometry.py  new_workbench_project_from_volume_mesh.py  om6WingWithSimulation.py  om6wing.csm  post_AFT_forces_history_V4.py  (+51 more)
examples/branch_assets/: template_script_load_mesh_run_case_or_sweep.py
examples/case_from_multiple_files/: case_from_multiple_files.py  main.py  outputs.yaml
examples/check_performance/: logging_benchmark.py
examples/client_utils/: case_list.py  mesh_list.py
examples/cloud_operations/: interpolate_case.py  use_cloud_project.py
examples/data_management/: case_list.py
examples/dev/: dev_case_results_download.py  dev_deserialize_case_from_file.py  dev_generate_schemas.py  dev_logging_benchmark.py  dev_run_case_from_files.py  dev_run_case_from_files_no_validation.py  dev_serializing_unyt.py  dev_update_models.py  dev_use_unit_system.py  dev_validate_params.py  dev_webservice_usage.py  list_cases_all_params.py
examples/example_library/: BET_disk.ipynb  aeroacoustics.ipynb  alpha_sweep.ipynb  conjugate_heat_transfer.ipynb  cube_snappy.ipynb  heat_transfer.ipynb  time_accurate_XV_15 copy.ipynb  time_accurate_XV_15.ipynb  unsteady_2D_cylinder.ipynb
flow360/: __init__.py  __init__.pyi  _api.py  _public_namespace.py  accounts_utils.py  environment.py  error_messages.py  exceptions.py  file_path.py  flags.py  global_exception_handler.py  log.py  new_simulation_models.py  python_client_version.py  services.py  solver_version.py  units.py  user_config.py  utils.py  v1.py  version.py  version_check.py  version_utils.py
flow360_schema/: __init__.py  exceptions.py  export.py  pyproject.toml
flow360doc/: cli.html  cloud.html  components.html
globals/: flags.py
html/: .buildinfo  flow360.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
local_testing/: snappyTest.stl  upload.py
plans/: 2026-03-03-hotfix-pr1393-pr1399-on-rc25.6.md  2026-03-03-rotation-volume-split-and-updater-plan.md  billing_method_refactor.md  claude.md  codex.md  create_hotfix_pr_permission_and_fail_loudly_plan.md  fix-pypi-publish-review.md  fix-selector-id-hash-inconsistency.markdown  gemini.md  mvp_refactor_plan.md  my_original_prompt.md  number_of_boundary_layers_default_fallback_plan.md  pypi_publish_commit_pin_and_ci_gate_fix_plan.md  pypi_publish_manual_approval_plan.md  remove_octree_spacing_shorthand.md  simplify-pypi-publish.md  total-pressure-expression-nondim-fix.markdown
plugins/: example_from_cloud_data.py  example_from_local_data.py  helper_download_data.py
tests/: AGENTS.md  __init__.py  _test_case.py  _test_case_submit_solver_version.py  _test_cli.py  _test_http.py  _test_surface_mesh.py  _test_validate.py  _test_volume_mesh.py  conftest.py  mock_server.py  pytest.ini  surface_forces_by_boundary  test_artifact_import.py  test_base_model.py  test_base_model_v2.py  test_case.py  test_case_webapi.py  test_cli.py  test_cli_login.py  test_client_version.py  test_cloud_examples.py  test_cloud_file_cache.py  test_compress_mesh_time.py  test_current_flow360_version.py  test_dev_flow360_params.py  test_draft_run_request.py  test_environment.py  test_examples.py  test_flow360.py  test_flow360_params.py  test_flow360_solver_params.py  test_folders.py  test_geometry.py  test_handle_version_and_unit_system.py  test_http.py  test_lazy_imports.py  test_log.py  test_meshing_params.py  test_project.py  (+29 more)
tools/: build_offline_wheelhouse.sh  check_pep440_deps.py  cli_live_benchmark.py  sort_ref_json.py  verify_offline_bundle.sh
(+1724 files in other folders)
