[project]
name = "flow360"
version = "v25.7.4b0"
description = "Flow360 Python Client"
authors = [{ name = "Flexcompute", email = "support@flexcompute.com" }]
requires-python = ">=3.9,<3.13"
dependencies = [
    "pydantic>=2.8,<2.12",
    "pytest>=7.1.2,<8",
    "click>=8.1.3,<9",
    "toml>=0.10.2,<0.11",
    "requests>=2.32.4,<3",
    "boto3>=1.24.63,<2",
    "numpy>=2.0,<3.0.0 ; python_version ~= '3.9'",
    "numpy>=2.0,<3.0.0 ; python_version ~= '3.10'",
    "numpy>=2.0,<3.0.0 ; python_version ~= '3.11'",
    "numpy>=2.0,<3.0.0 ; python_version ~= '3.12'",
    "scipy>=1.13.0,<2 ; python_version ~= '3.9'",
    "scipy>=1.14.0,<2 ; python_version ~= '3.10'",
    "matplotlib>=3.6.2,<4 ; python_version ~= '3.9'",
    "matplotlib>=3.6.2,<4 ; python_version ~= '3.10'",
    "pyyaml>=6.0.1,<7",
    "rich>=13.3.4,<14",
    "h5py>=3.10.0,<4",
    "zstandard>=0.21.0,<0.22",
    "unyt>=3.0.0,<4",
    "pandas>=2.2.1,<3",
    "pylint>=3.1.0,<4",
    "black[jupyter]>=24.10.0,<25",
    "numexpr>=2.10.1,<3",
    "pylatex>=1.4.2,<2",
    "prettyprinttree>=2.0.1,<3",
]

[project.optional-dependencies]
docs = [
    "autodoc_pydantic",
    "jupyter",
    "jinja2>=3.1.2",
    "ipython",
    "nbconvert>=7.11.0",
    "sphinx>=7",
    "nbsphinx>=0.8.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.0.1",
    "pydata-sphinx-theme>=0.13.3",
    "sphinx-favicon",
    "sphinx-sitemap>=2.5.1",
    "sphinx-notfound-page",
    "sphinx-tabs",
    "nbdime",
    "myst-parser",
    "sphinxemoji",
    "readthedocs-sphinx-search",
    "cairosvg",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-prompt",
    "sphinx_design",
    "sphinx_toolbox",
    "sphinx_paramlinks",
    "numpydoc>=1.8.0,<2",
    "sphinxcontrib-mermaid",
]

[project.scripts]
flow360 = "flow360.cli:flow360"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.20.3,<0.21",
    "pytest-cov>=4.0.0,<5",
    "autohooks>=23.4.0,<24",
    "autohooks-plugin-black>=22.11.0,<23",
    "autohooks-plugin-isort>=22.8.0,<23",
    "autohooks-plugin-pylint>=23.10.0,<24",
    "pytest>=7.3.0,<8",
    "pylint>=3.1.0,<4",
    "black>=24.1.0,<25",
    "notebook>=7.0.6,<8",
    "pytest-mock>=3.14.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git
    \.venv
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort", "autohooks.plugins.pylint"]

[tool.autohooks.plugins.pylint]
arguments = ["--rcfile=.pylintrc"]
